--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
 .App {
-  text-align: center;
+  margin: 80px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.suggestions {
+  background-color: white;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  width: 400px;
+  position: absolute;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.option {
+  padding: 3px;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.option-selected {
+  background-color: rgba(20, 180, 236, 0.7);
 }
